Fixed white space under title on mobile in Event Pages

--- a/EventApp/static/events/css/events.css
+++ b/EventApp/static/events/css/events.css
@@ -12,6 +12,10 @@ pre {
     font-weight: 300;
     font-size: 15px;
     color: #000;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 p {
@@ -23,7 +27,7 @@ p {
 
 .colorlib-heading {
     font-size: 24px;
-    margin-bottom:2px;
+    margin-bottom: 6px;
     font-weight: 600;
     text-transform: uppercase;
     letter-spacing: 5px;
@@ -42,10 +46,6 @@ p {
     background: #004E8A;
 }
 
-.colorlib-heading span {
-    display: block;
-}
-
 .team {
     margin-bottom: 2vh;
     font-weight: 300;
@@ -53,7 +53,6 @@ p {
 
 .contact {
     margin-bottom: 1vh;
-
 }
 
 .contact p {
@@ -62,7 +61,7 @@ p {
 
 @media screen and (max-width: 768px) {
     .colorlib-heading {
-        margin-bottom: 3em;
+        margin-bottom: 12px;
     }
 }
 
@@ -73,29 +72,6 @@ p {
     word-wrap: break-word;
     color: #fff;
     text-shadow: 2px 2px #000000;
-}
-
-.eventDiv {
-    z-index: 10;
-    background-color: #222222;
-    margin-bottom: 6vh;
-    margin-left: 1.5vw;
-    margin-right: 1.5vw;
-    opacity: 0.6;
-    border-radius: 8px;
-    height: auto;
-}
-
-.eventTitle {
-    z-index: 100;
-    padding-top: 1vh;
-    padding-bottom: 0.5vh;
-    color: #000;
-    opacity: 1;
-    font-weight: bold;
-    word-wrap: break-word;
-    hyphens: auto;
-    /*text-shadow: 2px 2px #000000;*/
 }
 
 .eventDescription {
@@ -119,91 +95,9 @@ p {
     cursor: pointer;
     margin-top: 2vh;
     margin-bottom: 1vh;
-    font-weight: bold;
     margin-right: 10px;
-    /*position: absolute;*/
-    /*bottom: 2vh;*/
 }
 
 .eventButtons:hover {
     background-color: #0047b3;
 }
-
-.hvr-bounce-to-top {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-    position: relative;
-    -webkit-transition-property: color;
-    transition-property: color;
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    border-radius: 8px;
-}
-
-.hvr-bounce-to-top:before {
-    content: "";
-    position: absolute;
-    z-index: -1;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background: #25ade3;
-    -webkit-transform: scaleY(0);
-    transform: scaleY(0);
-    -webkit-transform-origin: 50% 100%;
-    transform-origin: 50% 100%;
-    -webkit-transition-property: transform;
-    transition-property: transform;
-    -webkit-transition-duration: 0.5s;
-    transition-duration: 0.5s;
-    -webkit-transition-timing-function: ease-out;
-    transition-timing-function: ease-out;
-    border-radius: 8px;
-}
-
-.hvr-bounce-to-top:hover {
-    color: white;
-}
-
-.hvr-bounce-to-top:hover:before {
-    -webkit-transform: scaleY(1);
-    transform: scaleY(1);
-    -webkit-transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-    transition-timing-function: cubic-bezier(0.52, 1.64, 0.37, 0.66);
-}
-
-pre {
-    white-space: pre-wrap; /* Since CSS 2.1 */
-    white-space: -moz-pre-wrap; /* Mozilla, since 1999 */
-    white-space: -o-pre-wrap; /* Opera 7 */
-    word-wrap: break-word; /* Internet Explorer 5.5+ */
-}
-
-/* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
-}
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {
-.colorlib-heading{
-    margin-bottom: 4vh;
-}
-}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-}
-
